--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<h1>Test Results</h1><p>
 	<a href=".">.</a><br>
 
-├── <a href=./24/index.html>Latest Test Results - RUN ID: 24</a><br>
+├── <a href=./25/index.html>Latest Test Results - RUN ID: 25</a><br>
+├── <a href=./24/>RUN ID: 24 -   </a><br>
 ├── <a href=./23/>RUN ID: 23 -   </a><br>
 </html>
